--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -9,9 +9,9 @@ ports:
   - port: 5000
     onOpen: ignore
   - port: 5601
-    onOpen: open-browser
-  - port: 9200
     onOpen: open-preview
+  - port: 9200
+    onOpen: ignore
   - port: 9300
     onOpen: ignore
   - port: 9600
