--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,17 +6,7 @@ tasks:
 
 
 ports:
-  - port: 5000
-    onOpen: ignore
   - port: 5601
-    onOpen: open-preview
+    onOpen: open-browser
   - port: 9200
     onOpen: ignore
-  - port: 9300
-    onOpen: ignore
-  - port: 9600
-    onOpen: ignore
-
-vscode:
-  extensions:
-    - ms-azuretools.vscode-docker
